--- a/app/src/main/res/layout/activity_learn_word.xml
+++ b/app/src/main/res/layout/activity_learn_word.xml
@@ -9,7 +9,7 @@
     android:layout_height="match_parent">
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/ibClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -29,15 +29,16 @@
         android:layout_marginHorizontal="32dp"
         android:fontFamily="@font/nunito_bold"
         android:text="Galaxy"
+        android:singleLine="true"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton"
+        app:layout_constraintTop_toBottomOf="@+id/ibClose"
         tools:text="Galaxy"
         tools:ignore="HardcodedText" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/layoutVariants"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
@@ -78,6 +79,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layoutAnswer2"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_marginTop="17dp"
@@ -86,6 +88,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tvVariantNumber2"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="12dp"
@@ -96,6 +99,7 @@
                 android:textSize="16sp" />
 
             <TextView
+                android:id="@+id/tvVariantValue2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -137,6 +141,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layoutAnswer4"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_marginTop="17dp"
@@ -145,6 +150,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tvVariantNumber4"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="12dp"
@@ -155,6 +161,7 @@
                 android:textSize="16sp" />
 
             <TextView
+                android:id="@+id/tvVariantValue4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
